# search

./: PROJECT_DOCUMENTATION.md  README.md
backend/: .devenv.flake.nix  .devenvrc  .envrc  .gitignore  APIFY_SETUP.md  DEVENV.md  Dockerfile  INGEST_COMMANDS.md  INGEST_CUSTOM_FORMAT.md  INSPECT_DATA.md  OPTION_B_SETUP.md  QUICKSTART_INGEST.md  QUICKSTART_OPTION_B.md  QUICKSTART_TRAINING.md  README.md  START_SERVICES.md  SUMMARY_OPTION_B.md  TEST_SCRAPING_ENDPOINTS.md  TEXT_SEARCH.md  TRAINING.md  TROUBLESHOOTING.md  YOLO_FASHION_MODELS.md  devenv.nix  docker-compose.yml  main.py  pyproject.toml  requirements-nix.txt  run.sh  setup_fashion_yolo.sh  test_apify_token.py  test_fashion_yolo.py  test_image_search.sh  test_images_detailed.py  test_scraping.ps1  test_scraping.py  test_scraping.sh
backend/api/: __init__.py  routes.py  routes_extraction.py  routes_ingest.py  routes_scraping.py
backend/cli/: clear_db.py  ingest.py  ingest_custom.py  inspect_db.py
backend/config/: database.py  settings.py
backend/examples/: sample_data.csv
backend/models/: __init__.py  extracted_fashion_item.py  instagram_post.py  schemas.py
backend/repositories/: __init__.py  extracted_item_repository.py  instagram_post_repository.py
backend/services/: __init__.py  color_service.py  data_ingestion.py  detection_service.py  embedding_service.py  image_cache.py  instagram_scraper.py  outfit_service.py  pinterest_scraper.py  post_storage.py  scraping_service.py  semantic_extraction_service.py  text_search_service.py  vector_db_service.py
frontend/: .gitignore  README.md  devenv.nix  trace  (+5 more)
(+417 files in other folders)
